--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,45 +1,43 @@
-# This file is a template, and might need editing before it works on your project.
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
-
-# This is a sample GitLab CI/CD configuration file that should run without any modifications.
-# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
-# it uses echo commands to simulate the pipeline execution.
-#
-# A pipeline is composed of independent jobs that run scripts, grouped into stages.
-# Stages run in sequential order, but jobs within stages run in parallel.
-#
-# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
-
-stages:          # List of stages for jobs, and their order of execution
+stages:             # List of stages for jobs, and their order of execution
   - build
+  - gather
+  - preprocess
+  - process
   - test
-  - deploy
 
-build-job:       # This job runs in the build stage, which runs first.
+build-job:          # This job runs in the build stage, which runs first.
   stage: build
   script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
+    - conda env create -f environment.yml
+    - conda activate tima
 
-unit-test-job:   # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
+gather-job:         # This job gathers additional files.
+  stage: gather     # It only starts when the job in the build stage completes successfully.
   script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 5
-    - echo "Code coverage is 90%"
+    - bash src/get_lotus.sh
+    - bash src/get_example_isdb.sh
+    - bash src/get_gnverifier.sh
 
-lint-test-job:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
-  script:
-    - echo "Linting code... This will take about 10 seconds."
-    - sleep 5
-    - echo "No lint issues found."
 
-deploy-job:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
+preprocess-job:     # This job runs the preprocessing pipeline.
+  stage: preprocess # It starts when the job in the gather stage completes successfully.
   script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed."
+    - Rscript src/prepare_lotus.R
+    - Rscript src/prepare_library.R
+    - Rscript src/prepare_adducts.R
+    - Rscript src/prepare_gnps.R
+    - Rscript src/prepare_isdb.R
+    - Rscript src/prepare_edges.R
+    - Rscript src/prepare_features_components.R
+    - Rscript src/prepare_features_classification.R
+    - Rscript src/prepare_taxa.R 
+
+process-job:        # This job runs the preprocessing pipeline.
+  stage: processs   # It starts when the job in the preprocess stage completes successfully.
+  script:
+    - Rscript src/process_annotations.R
+
+test-job:           # This job runs the test.
+  stage: test       # It remains to be done.
+  script:
+    - echo "Looking for some tests..."
