--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+image: continuumio/miniconda3:latest
+
 stages:             # List of stages for jobs, and their order of execution
   - build
   - gather
@@ -8,8 +10,51 @@ stages:             # List of stages for jobs, and their order of execution
 build-job:          # This job runs in the build stage, which runs first.
   stage: build
   script:
-    - docker build -t tima .
-    - docker run -it --rm -v $PWD:/app tima
+    - conda env create -f environment.yml
+    - conda activate tima
+
+gather-job:         # This job gathers additional files.
+  stage: gather     # It only starts when the job in the build stage completes successfully.
+  script:
+    - bash src/get_lotus.sh
+    - bash src/get_example_isdb.sh
+    - bash src/get_gnverifier.sh
+
+
+preprocess-job:     # This job runs the preprocessing pipeline.
+  stage: preprocess # It starts when the job in the gather stage completes successfully.
+  script:
+    - Rscript src/prepare_lotus.R
+    - Rscript src/prepare_library.R
+    - Rscript src/prepare_adducts.R
+    - Rscript src/prepare_gnps.R
+    - Rscript src/prepare_isdb.R
+    - Rscript src/prepare_edges.R
+    - Rscript src/prepare_features_components.R
+    - Rscript src/prepare_features_classification.R
+    - Rscript src/prepare_taxa.R 
+
+process-job:        # This job runs the preprocessing pipeline.
+  stage: process    # It starts when the job in the preprocess stage completes successfully.
+  script:
+    - Rscript src/process_annotations.R
+
+test-job:           # This job runs the test.
+  stage: test       # It remains to be done.
+  script:
+    - echo "Looking for some tests..."
+image: continuumio/miniconda3:latest
+
+stages:             # List of stages for jobs, and their order of execution
+  - build
+  - gather
+  - preprocess
+  - process
+  - test
+
+build-job:          # This job runs in the build stage, which runs first.
+  stage: build
+  script:
     - conda env create -f environment.yml
     - conda activate tima
 
