--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,10 @@ stages:             # List of stages for jobs, and their order of execution
 build-job:          # This job runs in the build stage, which runs first.
   stage: build
   script:
+    - export PIP_CACHE_DIR="/opt/cache/pip"
     - conda env create -f environment.yml
+    - conda init bash
+    - source ~/.bashrc
     - conda activate tima
 
 gather-job:         # This job gathers additional files.
