--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,4 @@
-image: 
-  - continuumio/miniconda3:latest
-  - rocker/r-ver:4.1.1
+image: continuumio/miniconda3:latest
 
 stages:
   - integration-test
