--- a/config/default/process_annotations.yaml
+++ b/config/default/process_annotations.yaml
@@ -3,7 +3,7 @@ name: library # Adducts library file prepared with previous steps
 annotation: data/interim/annotations/db1c51fa29a64892af520698a18783e4_isdb_treated.tsv.gz # Annotation file prepared with previous steps
 taxa: data/interim/taxa/db1c51fa29a64892af520698a18783e4_taxed.tsv.gz # Taxed features file prepared with previous steps
 edges: data/interim/edges/db1c51fa29a64892af520698a18783e4_edges.tsv.gz # Edges file prepared with previous steps
-output: FinalResults.tsv.gz
+output: FinalResults.tsv
 top_k:
   initial: 50
   final: 3
