--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ data/source/private/**
 data/source/libraries/**
 data/interim/**
 data/processed/**
+.Rproj.user
+docs
+.Rhistory
+.Rdata
+.httr-oauth
+.DS_Store
