--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -16,6 +16,7 @@ jobs:
       SPELLCHECK: true
     steps:
       - name: Build and integration test
+      uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: tima
           environment-file: environment.yml
