--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -12,15 +12,9 @@ jobs:
     container: continuumio/miniconda3
     steps:
       - name: Build environement
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          activate-environment: tima
-          environment-file: ../environment.yml
-          auto-activate-base: false
-          miniconda-version: 'latest'
-      - name: Run tests
         shell: bash --login {0}
         run: |
+          conda env create -f environment.yml
           bash ../tests/integration_test.sh
   publish:
     runs-on: ubuntu-latest
@@ -29,15 +23,9 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
-        name: Generate page
-        run: |
-          mkdir public
-          cp -r docs .public
-          mv .public public
-      -
         name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
-          build_dir: public
+          build_dir: docs
