--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -29,3 +29,5 @@ jobs:
         with:
           target_branch: gh-pages
           build_dir: docs
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
