--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -17,8 +17,7 @@ jobs:
           python-version: 3.8
       - name: Install dependencies
         run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        $CONDA/bin/conda env update --file environment.yml
+          $CONDA/bin/conda env create --file environment.yml
       - name: Run tests
         run: |
           bash tests/integration_test.sh
