--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -14,9 +14,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniconda-version: "latest"
       - name: Install dependencies
         run: |
-          $CONDA/bin/conda env create --file environment.yml
+          conda env create --file environment.yml
       - name: Run tests
         run: |
           bash tests/integration_test.sh
@@ -28,10 +31,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniconda-version: "latest"
       - name: Install dependencies
         run: |
-          unset SUDO_UID SUDO_GID SUDO_USER
-          $CONDA/bin/conda env create --file environment.yml
+          conda env create --file environment.yml
       - name: Run tests
         run: |
           bash tests/integration_test.sh
@@ -41,6 +46,8 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           miniconda-version: "latest"
+      - name: Setup WSL
+        uses: Vampire/setup-wsl@v1.1.0
       - uses: actions/checkout@v2
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
