--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -61,6 +61,8 @@ jobs:
       - name: Run tests
         shell: wsl-bash {0}
         run: |
+          sudo apt-get install dos2unix
+          dos2unix tests/integration_test.sh
           bash tests/integration_test.sh
   deploy-doc:
     runs-on: ubuntu-latest
