--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -75,7 +75,7 @@ jobs:
       - name: Run tests
         shell: powershell
         run: |
-          wsl -u root -d Ubuntu-18.04 -- source bash tests/integration_test.sh
+          wsl -u root -d Ubuntu-18.04 -- source tests/integration_test.sh
   deploy-doc:
     runs-on: ubuntu-latest
     steps:
