--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -14,6 +14,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniconda-version: "latest"      
       - name: Install dependencies
         run: |
           conda env create --file environment.yml
@@ -29,6 +32,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniconda-version: "latest"  
       - name: Install dependencies
         run: |
           conda env create --file environment.yml
@@ -44,6 +50,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniconda-version: "latest"  
       - name: Setup WSL, DOS2UNIX, etc.
         shell: powershell
         run: |
