--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -67,7 +67,7 @@ jobs:
           Enable-WindowsOptionalFeature -Online -FeatureName Microsoft-Windows-Subsystem-Linux
           .\Ubuntu\ubuntu1804.exe install --root
           wsl -u root -d Ubuntu-18.04 wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
-          wsl -u root -d Ubuntu-18.04 bash Miniconda3-latest-Linux-x86_64.sh
+          wsl -u root -d Ubuntu-18.04 bash Miniconda3-latest-Linux-x86_64.sh yes
       - name: Install dependencies
         shell: powershell
         run: |
