--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -68,6 +68,7 @@ jobs:
           wsl -u root -d Ubuntu-18.04 wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
           wsl -u root -d Ubuntu-18.04 bash Miniconda3-latest-Linux-x86_64.sh -b
           wsl -u root -d Ubuntu-18.04 source ~/.bashrc
+          wsl -u root -d Ubuntu-18.04 export PATH=/home/USER/anaconda3/bin:$PATH
           wsl -u root -d Ubuntu-18.04 conda init
       - name: Install dependencies
         run: |
