--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -67,11 +67,11 @@ jobs:
           .\Ubuntu\ubuntu1804.exe install --root
           wsl -u root -d Ubuntu-18.04 wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
           wsl -u root -d Ubuntu-18.04 bash Miniconda3-latest-Linux-x86_64.sh -b
-          Get-Service LxssManager | Restart-Service
-          wsl -u root -d Ubuntu-18.04 conda.exe init
+          wsl -u root -d Ubuntu-18.04 export PATH=~/miniconda3/bin:$PATH
+          wsl -u root -d Ubuntu-18.04 conda list
       - name: Install dependencies
         run: |
-          wsl -u root -d Ubuntu-18.04 conda.exe env create --file environment.yml
+          wsl -u root -d Ubuntu-18.04 conda env create --file environment.yml
       - name: Run tests
         run: |
           wsl -u root -d Ubuntu-18.04 bash tests/integration_test.sh
