--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -67,7 +67,11 @@ jobs:
           .\Ubuntu\ubuntu1804.exe install --root
           wsl -u root -d Ubuntu-18.04 wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
           wsl -u root -d Ubuntu-18.04 bash Miniconda3-latest-Linux-x86_64.sh -b
+          wsl -u root -d Ubuntu-18.04 source ~/.bashrc
+          wsl -u root -d Ubuntu-18.04 which python
           wsl -u root -d Ubuntu-18.04 export PATH=~/miniconda3/bin:$PATH
+          wsl -u root -d Ubuntu-18.04 source ~/.bashrc
+          wsl -u root -d Ubuntu-18.04 which python
           wsl -u root -d Ubuntu-18.04 conda list
       - name: Install dependencies
         run: |
