--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -66,7 +66,8 @@ jobs:
           Enable-WindowsOptionalFeature -Online -FeatureName Microsoft-Windows-Subsystem-Linux
           .\Ubuntu\ubuntu1804.exe install --root
           wsl -u root -d Ubuntu-18.04 wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
-          wsl -u root -d Ubuntu-18.04 sudo apt update && upgrade
+          wsl -u root -d Ubuntu-18.04 sudo apt update
+          wsl -u root -d Ubuntu-18.04 sudo apt upgrade
           wsl -u root -d Ubuntu-18.04 sudo apt install python3 python3-pip ipython3
           wsl -u root -d Ubuntu-18.04 bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
           wsl -u root -d Ubuntu-18.04 eval "$(anaconda/bin/conda shell.bash hook)"
