--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -68,7 +68,8 @@ jobs:
           wsl -u root -d Ubuntu-18.04 wget wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
           wsl -u root -d Ubuntu-18.04 bash Miniconda3-latest-Linux-x86_64.sh -b
           wsl -u root -d Ubuntu-18.04 source ~/.bashrc
-          wsl -u root -d Ubuntu-18.04 source ~/miniconda3/bin/activate
+          wsl -u root -d Ubuntu-18.04 source ~/miniconda3/etc/profile.d/conda.sh
+          wsl -u root -d Ubuntu-18.04 source ~/anaconda3/etc/profile.d/conda.sh
           wsl -u root -d Ubuntu-18.04 conda init
       - name: Install dependencies
         run: |
